<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Profile" app:allowDividerBelow="true" >

        <Preference
            app:key="change_email"
            app:title="@string/change_e_mail"
            app:allowDividerBelow="true"/>
        <Preference
            app:key="change_password"
            app:title="@string/change_password"
            app:allowDividerBelow="true"/>

        <ListPreference
            app:defaultValue="system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="About" app:allowDividerBelow="true" >

        <Preference
            app:key="about_ninova"
            app:title="@string/about"
            app:allowDividerBelow="true"
            app:summary="AppVersion"/>
        <Preference
            app:key="privacy_policy"
            app:title="@string/privacy_policy"
            app:allowDividerBelow="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="Account" app:allowDividerBelow="true" >

        <Preference
            app:key="sign_out"
            app:title="@string/sign_out"
            app:allowDividerBelow="true"
            app:icon="@drawable/ic_sign_out">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>