<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.books.BookDetailsActivity">

    <LinearLayout
        android:layout_margin="16dp"
        android:id="@+id/bookDetailGeneralLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bookCoverImageView"
            android:layout_margin="2dp"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:src="@drawable/example_book"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/bookDetailTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_book"
                android:textColor="@color/light_primary"
                android:textSize="16sp"
                android:layout_margin="4dp"/>

            <TextView
                android:id="@+id/bookDetailSubTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_of_the_book"
                android:textColor="@color/light_primary_variant"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/bookDetailAuthorsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_of_the_book"
                android:textColor="@color/light_primary"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/bookDetailTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info" />

    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:id="@+id/bookDetailNotesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/bookDetailShelvesTextViews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookDetailShelvesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_shelves"
                android:textColor="@color/light_primary"
                android:textSize="14sp"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>

            <TextView
                android:id="@+id/shelvesOfBooks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_this_book_to_a_shelf"
                android:textColorHint="@color/light_primary_variant"
                android:textColor="@color/light_primary_variant"
                android:textSize="16sp"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:drawableEndCompat="@drawable/ic_action_arrow"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bookDetailUserNotesLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/bookDetailUserNotesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_notes"
                android:textColor="@color/light_primary"
                android:textSize="14sp"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>

            <TextView
                android:id="@+id/bookDetailUserNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:ellipsize="end"
                android:textColor="@color/light_primary_variant"
                android:textSize="16sp"
                android:hint="@string/add_your_notes_here"
                android:textColorHint="@color/light_primary_variant"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:drawableEndCompat="@drawable/ic_action_arrow" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/bookDetailInfoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/bookDetailPagesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pages"
                android:textColor="@color/light_primary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/bookDetailPagesNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/page_number"
                android:textColor="@color/light_primary_variant"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/bookDetailCategoriesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textColor="@color/light_primary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/bookDetailCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_comedy_horror"
                android:textColor="@color/light_primary_variant"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/bookDetailPublisherTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publisher"
                android:textColor="@color/light_primary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/bookDetailPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/awesome_inc"
                android:textColor="@color/light_primary_variant"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/bookDetailPublishDateTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/published_date"
                android:textColor="@color/light_primary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/bookDetailPublishDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_01_01_0001"
                android:textColor="@color/light_primary_variant"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/bookDetailDescriptionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/light_primary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/bookDetailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/light_primary_variant"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutDetailsError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something_went_wrong"
            android:textColor="@color/light_primary"
            android:textSize="16sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/searchnotfound"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>